Bug 39306 - [LOCALHELP] Missing Help Page 'Presentation Minimizer'
Summary: [LOCALHELP] Missing Help Page 'Presentation Minimizer'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: David Nelson
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-17 09:12 UTC by Florian Reisinger
Modified: 2011-12-23 13:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reisinger 2011-07-17 09:12:49 UTC
If you want to minimize a presentation, the help-page is missing (or: The help page is empty). 
To open the Help page please click Extras ==> Minimize oresentation (Presentation komprimieren in German). At the left bottom, there is a help-button. By clicking this button, a read-only document opens, called Private:stream (It's a writer document. This should be a help-page.
Comment 1 manj_k 2011-07-17 09:40:39 UTC
'help_en-US.odt' (also: 'help_de.odt'),
path: <Program Files>\<LibO_342>\share\extensions\presentation-minimizer\help,
is an empty text document.
Comment 2 manj_k 2011-07-17 10:01:27 UTC
Reproducible
with LibO 3.4.2 RC1
LibreOffice 3.4.2 OOO340m1 (Build:201)
Comment 3 Thomas Hackert 2011-07-17 10:22:46 UTC
(In reply to comment #0)
> If you want to minimize a presentation, the help-page is missing (or: The help
> page is empty). 
> To open the Help page please click Extras ==> Minimize oresentation
> (Presentation komprimieren in German). At the left bottom, there is a
> help-button. By clicking this button, a read-only document opens, called
> Private:stream (It's a writer document. This should be a help-page.

Hello Florian, *,
thank you for reporting the bug, which I have reported to the discuss<at>l.o ML :)

One slight correction, though: In English it is not "Extras - Minimize presentation" but "Tools - Minimize Presentation..." ... ;)

I can confirm this issue with LO 3.4.2RC1 (OOO340m1 (Build:201) ) under Debian Testing AMD64.
Have a nice evening
Thomas.
Comment 4 Stefan Haas 2011-07-17 11:11:12 UTC
Bug laso confirmd with LibreOffce 3.3.3
Comment 5 Rainer Bielefeld Retired 2011-07-17 22:32:26 UTC
Very old problem, also [Reproducible] with "LibreOffice Portable 3.3.0  - WIN7  Home Premium (64bit) German UI [OOO330m19 (Build:6 Tag 3.3.0.4)]".

The empty writer page really is a strange effect. Main problem is the missing item (because of missing help text)for  Presentation Minimizer Help as reported.

Empty writer page instead of Help still opens with Master "LibO-dev 3.4.5  – WIN7  Home Premium  (64bit) English UI 
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"

@David
Please feel free to reassign if it’s not your area
Comment 6 David Nelson 2011-07-27 00:40:32 UTC
I'm forwarding this to the docs ML for discussion and action.
Comment 7 Andras Timar 2011-11-22 10:18:14 UTC
I removed the empty help files and I also removed the Help button from the wizard. BTW I think usage is explained in the wizard itself and UI is self explanatory. Please reopen the bug, if you want to add a non-trivial help to Presentation Minimizer.
Comment 8 Björn Michaelsen 2011-12-23 13:27:15 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.