remove (empty) help of Presentation Minimizer fdo#39306